Removed old style hero, replaced with full width hero (like old edgeless here). Fixed issues with .reverse-stack. Overflow auto is better than hidden as allows shaddows to bleed.

--- a/less/components/grid.less
+++ b/less/components/grid.less
@@ -10,38 +10,18 @@
 }
 
 .container.limit .row,
-.container.limit .page-heading,
-.container.limit.hero,
-.container.limit .hero {
+.container.limit .page-heading {
 	float: none;
 	max-width: @limit;
 	margin-left: auto;
 	margin-right: auto;
-	overflow: hidden;
-}
-
-.container .row.limit {
-	max-width: @limit;
-	padding-left: @left-gutter;
-	padding-right: @left-gutter;
-	float: none;
-	margin: auto;
+	overflow: auto;
 }
 
 .container.limit.navigation .row,
 .container.limit.navigation .page-heading,
 .container.limit.hero.navigation {
 	overflow: visible;
-}
-
-.container.limit.hero,
-.container.limit .hero {
-	max-width: @limit-bar-margins;
-}
-
-.container.limit.hero.hero-edgeless,
-.container.limit .hero.hero-edgeless {
-	max-width: 100%;
 }
 
 .container .row {
@@ -56,12 +36,13 @@
 	text-align: left;
 	padding: 0 @right-gutter 0 @left-gutter;
 	display: inline;
-	margin-bottom: 20px;
+	margin-bottom: 40px;
 	min-height: 1px;
 }
 
 .container .row.reverse-stack > .col {
 	float: right;
+	padding: 0 @right-gutter 0 @left-gutter;
 }
 
 .container .row .col:empty {
@@ -69,71 +50,20 @@
 }
 
 .container .row .col .col {
-	padding-left: 0;
-	padding-right: 0;
+	padding: 0;
 }
 
 .container .row .col > img:last-child {
-	margin-bottom: 20px;
+	//margin-bottom: 20px;
 }
 
-.hero {
+.container.hero {
 	padding: 40px 30px;
-	margin-left: @left-gutter;
-	margin-right: @right-gutter;
-	margin-bottom: 40px;
-	background-color: lighten(@silver, 3%);
-	.border-radius(6px);
+	background-color: #f9f9f9;
 }
 
-.container .row.hero .col {
+.container.hero .col {
 	margin-bottom: 0;
-}
-
-.container .hero.hero-edgeless,
-.container.hero.hero-edgeless,
-.container.hero.hero-edgeless.limit,
-.container.limit .hero.hero-edgeless,
-.hero.hero-edgeless {
-	margin-left: 0;
-	margin-right: 0;
-	.border-radius(0);
-}
-
-.hero.hero-edgeless :last-child {
-	margin-bottom: 0;
-}
-
-.hero.hero-transparent {
-	background: none;
-}
-
-.hero.hero-blue {
-	background-color: @blue;
-}
-
-.hero.hero-green {
-	background-color: @green;
-}
-
-.hero.hero-orange {
-	background-color: @orange;
-}
-
-.hero.hero-red {
-	background-color: @red;
-}
-
-.hero.hero-purple {
-	background-color: @purple;
-}
-
-.hero.hero-lime {
-	background-color: @lime;
-}
-
-.hero.hero-dragonfruit {
-	background-color: @dragonfruit;
 }
 
 .container .col.of-1,
@@ -151,14 +81,6 @@
 	width: 100%
 }
 
-@media only screen and (max-width: @limit) {
-	.container.limit.hero,
-	.container.limit .hero {
-		margin-left: @left-gutter;
-		margin-right: @right-gutter;
-	}
-}
-
 @media only screen and (min-width: 769px) {
 	.grid(@num-cols, @num-cols);
 	
@@ -166,12 +88,12 @@
 	
 	.skip-reverse(@num-cols, @num-cols);
 	
-	.container .row .col .col {
-		padding-left: @left-gutter;
+	.container .row .col {
+		margin-bottom: 0;
 	}
 	
 	.container .row .col .col {
-		padding-right: @right-gutter;
+		padding: 0 @right-gutter 0 @left-gutter;
 	}
 	
 	.container .row .col .col:first-of-type {
@@ -180,5 +102,15 @@
 	
 	.container .row .col .col:last-of-type {
 		padding-right: 0;
+	}
+	
+	.container .row.reverse-stack > .col:first-of-type {
+		padding-left: @left-gutter;
+		padding-right: 0;
+	}
+	
+	.container .row.reverse-stack > .col:last-of-type {
+		padding-right: @right-gutter;
+		padding-left: 0;
 	}
 }
